--- a/daily.html
+++ b/daily.html
@@ -44,8 +44,8 @@
   var days = null;
   var tweens = []; cam_tweens = [];
   var each_day_max = [];
-  var test = 4;
-  var frame_speed = 1000;
+  var test = 10;
+  var frame_speed = 5000;
   var start_delay = 2000;
   var sli_width = 1100; // days to test
   var margin = {top: 20, right: 50, bottom: 20, left: 50},
@@ -108,12 +108,14 @@
     .attr("cx", 0)
     .attr("r", 7)
     .attr("id","dot")
-    .style("fill", "#ff0000");
+    .style("fill", "#ff0000")
+    .style("stroke","ff9200")
+    .style("stroke-width","2");
 
     var date = svg.append("text")
     .attr("transform", "translate(0," + margin.top + ")")
     .attr("id","date")
-    .style("fill","#ff0000")
+    .style("fill","#ffffff")
     .style("text-anchor","middle")
     .text("");
 }
@@ -185,6 +187,7 @@ $(window).ready(function(){
       globe.addData(each_day, {format: 'magnitude', name: "day"+(i+1), animated: true});
       count++;
       console.log(count + " days added!");
+    
     }
     
     globe.createPoints();
